src/component/PortfolioItemInfo.css
.portfolio-info-pane {
  position: absolute;
  top: var(--p1);
  left: calc(-1 * var(--p1));
  z-index: 100;
  background-color: var(--grey-9);
  padding: var(--p1);
  padding-top: 0px;
  width: calc(100% + var(--p1));
  height: calc(100% - var(--p1));
  display: block;
  box-shadow: var(--grey-7) 0px 0px 4px 0px;
  overflow-y: scroll;
  overflow-x: hidden;
  scroll-snap-type: y mandatory;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.portfolio-info-pane::-webkit-scrollbar {
  display: none;
}

.portfolio-info-page {
  padding-top: var(--p1);
  position: relative;
  width: 100%;
  height: 100%;
  max-height: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 30px calc(100% - 120px);
  column-gap: var(--p2);
  row-gap: var(--p1);
  grid-template-areas:
    "header header"
    "images body";
  scroll-snap-align: start;
  align-items: start;
}

.portfolio-info-page-header {
  grid-area: header;
}

.portfolio-info-page-body {
  grid-area: body;
  display: flex;
  flex-direction: column;
  align-items: end;
  justify-content: start;
  line-height: 36px;
  font-weight: 300;
  color: var(--grey-3);
}

.portfolio-info-images {
  grid-area: images;
  display: flex;
  flex-direction: column;
  gap: var(--p1);
  align-items: start;
  justify-content: start;
  height: 100%;
  max-height: 100%;
}

.portfolio-info-images img {
  width: auto;
  max-width: 100%;
  max-height: 100%;
  box-shadow: var(--grey-8) 2px 2px 4px 0px;
  object-fit: contain;
  background-color: #ffffff;
}

@keyframes pi-slow-flash {
  from {
    border-left: solid var(--grey-5) 2px;
    border-bottom: solid var(--grey-5) 2px;
  }
  to {
    border-left: solid var(--grey-7) 2px;
    border-bottom: solid var(--grey-7) 2px;
  }
}

.portfolio-info-scroll-indicator {
  position: absolute;
  left: 50%;
  bottom: var(--p1);
  width: var(--p2);
  height: var(--p2);
  border-left: solid var(--grey-5) 2px;
  border-bottom: solid var(--grey-5) 2px;
  transform: rotate(-45deg) translate(-50%, -50%);
  animation: pi-slow-flash 0.5s linear 0s infinite alternate;
}

@media only screen and (max-width: 1024px) {
  .portfolio-info-pane {
    position: fixed;
    margin-top: 0px;
    z-index: 5;
    top: 0%;
    left: 0%;
    padding: 150px var(--p1) 60px var(--p1);
    background-color: var(--grey-8);
    min-height: calc(100dvh);
    height: calc(100dvh);
    width: 100dvw;
    overflow: scroll;
    scroll-snap-type: none;
  }

  .portfolio-info-page {
    position: relative;
    width: 100%;
    height: fit-content;
    display: flex;
    flex-direction: column;
    gap: var(--p1);
    scroll-snap-align: none;
    padding-bottom: var(--p3);
    padding-top: 0px;
    max-height: fit-content;
  }

  .portfolio-info-page-body {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: start;
  }

  .portfolio-info-scroll-indicator {
    display: none;
  }
}

